FINAL VERSION by LIU Xianqi 61551

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">musiclibrary-kyleliuxianqi</string>
+    <string name="album_icon">💿</string>
+    <string name="song_icon">🎧</string>
 </resources>
